--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "multer": "^1.4.3",
     "nodemailer": "^6.6.3",
     "nodemailer-sendgrid-transport": "^0.2.0",
-    "uuid": "^8.3.2"
+    "uuid": "^8.3.2",
+    "haversine-distance": "^1.2.1"
   }
 }
